--- a/modules/webprofiler/templates/Profiler/dashboard.html.twig
+++ b/modules/webprofiler/templates/Profiler/dashboard.html.twig
@@ -1,13 +1,18 @@
-<div class="webprofiler--wrapper">
-  <div class="webprofiler--collectors" style="float: left;width: 10%;">
+<div class="webprofiler">
+  <div class="webprofiler__collectors">
     <ul>
-    {% for collector in collectors %}
-      <li class="webprofiler--collector"><a href="{{ path('webprofiler.panel', {'token': token, 'name': collector.name}) }}" class="use-ajax">{{ collector.name }}</a></li>
-    {% endfor %}
+      {% for collector in collectors %}
+        <li class="webprofiler__collector"><a
+            href="{{ path('webprofiler.panel', {'token': token, 'name': collector.name}) }}"
+            class="use-ajax">{{ collector.name|capitalize }}</a></li>
+      {% endfor %}
     </ul>
   </div>
+  <div class="webprofiler__panels">
+    <p>{{ '@method @url from @ip at @time'|t({'@method': profile.method, '@url': profile.url,'@ip': profile.ip,'@time': profile.time}) }}</p>
 
-  <div class="webprofiler--collectors" id="js-webprofiler-panel" style="float: left;width: 90%;">
-    panel
+    <div class="webprofiler__panel" id="js-webprofiler-panel">
+      <p>{{ "Choose a panel on the left"|t }}</p>
+    </div>
   </div>
 </div>
