--- a/modules/webprofiler/templates/Collector/request.html.twig
+++ b/modules/webprofiler/templates/Collector/request.html.twig
@@ -86,18 +86,18 @@
 
 {% macro set_handler(controller, route, method) %}
   {% if controller.class is defined -%}
-    {%- if method|default(false) %}<span
-      class="sf-toolbar-status sf-toolbar-redirection-method">{{ method }}</span>{% endif -%}
-      <span title="{{ controller.class }}">
+    {%- if method|default(false) %}<span class="sf-toolbar-status sf-toolbar-redirection-method">{{ method }}</span>{% endif -%}
+    {%- set link = controller.file|file_link(controller.line) %}
+    {%- if link %}<a href="{{ link }}" title="{{ controller.class }}">{% else %}<span title="{{ controller.class }}">{% endif %}
 
-        {%- if route|default(false) -%}
-          @{{ route }}
-        {%- else -%}
-          {{- controller.class|striptags -}}
-          {{- controller.method ? ' :: ' ~ controller.method -}}
-        {%- endif -%}
+    {%- if route|default(false) -%}
+      @{{ route }}
+    {%- else -%}
+      {{- controller.class|abbr_class|striptags -}}
+      {{- controller.method ? ' :: ' ~ controller.method -}}
+    {%- endif -%}
 
-      </span>
+    {%- if link %}</a>{% else %}</span>{% endif %}
   {%- else -%}
     <span>{{ route|default(controller) }}</span>
   {%- endif %}
